logs/tunir.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tunir-0.17.3.egg-info'...
Listing './lib/python3.5/site-packages/tunirlib'...
Compiling './lib/python3.5/site-packages/tunirlib/__init__.py'...
***   File "./lib/python3.5/site-packages/tunirlib/__init__.py", line 32
    print "Job configuration is missing."
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tunirlib/tuniraws.py'...
***   File "./lib/python3.5/site-packages/tunirlib/tuniraws.py", line 27
    print "Starting an AWS EC2 based job."
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tunirlib/tunirmultihost.py'...
***   File "./lib/python3.5/site-packages/tunirlib/tunirmultihost.py", line 310
    print "*** print_tb:"
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tunirlib/tunirutils.py'...
***   File "./lib/python3.5/site-packages/tunirlib/tunirutils.py", line 100
    print "Polling for SSH connection"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tunirlib/tunirvagrant.py'...
***   File "./lib/python3.5/site-packages/tunirlib/tunirvagrant.py", line 119
    print "Wrote Vagrant config file."
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/man'...
Listing './share/man/man8'...
Listing './share/python-wheels'...
Listing './share/tunir'...
